--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "start": "next start",
     "prepare": "husky",
     "postbuild": "next-sitemap",
-    "db:setup": "node scripts/setup-db.js"
+    "db:setup": "node scripts/setup-db.js",
+    "drizzle:generate": "drizzle-kit generate:migration",
+    "drizzle:push": "drizzle-kit push"
   },
   "dependencies": {
     "@alpacahq/alpaca-trade-api": "^3.1.3",
@@ -28,12 +30,11 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@vercel/analytics": "^1.6.1",
     "ai": "^5.0.102",
-    "better-auth": "latest",
+    "better-auth": "^1.4.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
-    "drizzle-kit": "^0.31.7",
     "drizzle-orm": "latest",
     "drizzle-zod": "^0.8.3",
     "knex": "latest",
@@ -41,6 +42,7 @@
     "lucide-react": "^0.454.0",
     "mysql2": "latest",
     "next": "16.0.10",
+    "next-auth": "^4.24.13",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
@@ -73,6 +75,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/web-push": "^3.6.4",
+    "drizzle-kit": "^0.31.9",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.3",
     "eslint-plugin-jsx-a11y": "^6.10.2",
