--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/cron/scrape-jobs",
       "schedule": "0 */6 * * *"
+    },
+    {
+      "path": "/api/cron/validate-jobs",
+      "schedule": "0 2,8,14,20 * * *"
     }
   ]
 }
