--- a/.github/workflows/validate-ashby-jobs.yml
+++ b/.github/workflows/validate-ashby-jobs.yml
@@ -17,10 +17,10 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "18"
+          node-version: "20"
 
       - name: Install dependencies
-        run: npm install puppeteer
+        run: npm install puppeteer --no-save --no-package-lock
 
       - name: Validate Ashby jobs
         env:
