--- a/.github/workflows/validate-ashby-jobs.yml
+++ b/.github/workflows/validate-ashby-jobs.yml
@@ -19,6 +19,12 @@ jobs:
         with:
           node-version: "20"
 
+      - name: Cache Chromium
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/puppeteer
+          key: chromium-${{ runner.os }}-${{ hashFiles('**/package.json') }}
+
       - name: Install dependencies
         run: npm install puppeteer --no-save --no-package-lock
 
