adjust folder structure

--- a/.github/workflows/validate-ashby-jobs.yml
+++ b/.github/workflows/validate-ashby-jobs.yml
@@ -23,17 +23,17 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cache/puppeteer
-          key: chromium-${{ runner.os }}-${{ hashFiles('scripts/ashby-validator/package.json') }}
+          key: chromium-${{ runner.os }}-${{ hashFiles('tools/ashby-validator/package.json') }}
 
       - name: Install dependencies
-        working-directory: scripts/ashby-validator
+        working-directory: tools/ashby-validator
         run: npm install
 
       - name: Validate Ashby jobs
         env:
           APP_URL: ${{ secrets.APP_URL }}
           CRON_SECRET: ${{ secrets.CRON_SECRET }}
-        working-directory: scripts/ashby-validator
+        working-directory: tools/ashby-validator
         run: npm run start
 
       - name: Notify on failure
