--- a/.github/workflows/validate-jobs.yml
+++ b/.github/workflows/validate-jobs.yml
@@ -29,7 +29,7 @@ jobs:
         working-directory: tools/job-link-validator
         run: npm install
 
-      - name: Validate Ashby jobs
+      - name: Validate jobs
         env:
           APP_URL: ${{ secrets.APP_URL }}
           CRON_SECRET: ${{ secrets.CRON_SECRET }}
