--- a/.github/workflows/validate-jobs.yml
+++ b/.github/workflows/validate-jobs.yml
@@ -1,10 +1,9 @@
 name: Validate Jobs
 
 on:
-  schedule:
-    # Run daily at 7 AM and 7 PM PST (8 AM and 8 PM PDT)
-    - cron: "0 3,9,15,21 * * *"
   workflow_dispatch: # Allow manual trigger
+  repository_dispatch:
+    types: [validate-jobs] # Trigger via API
 
 jobs:
   validate-jobs:
