--- a/.github/workflows/validate-jobs.yml
+++ b/.github/workflows/validate-jobs.yml
@@ -28,12 +28,16 @@ jobs:
         working-directory: tools/job-link-validator
         run: npm install
 
+      - name: Install Xvfb
+        run: sudo apt-get install -y xvfb
+
       - name: Validate jobs
         env:
           APP_URL: ${{ secrets.APP_URL }}
           CRON_SECRET: ${{ secrets.CRON_SECRET }}
+          PUPPETEER_HEADLESS: "false"
         working-directory: tools/job-link-validator
-        run: npm run start
+        run: xvfb-run -a npm run start
 
       - name: Notify on failure
         if: failure()
