--- a/.github/workflows/validate-jobs.yml
+++ b/.github/workflows/validate-jobs.yml
@@ -28,16 +28,12 @@ jobs:
         working-directory: tools/job-link-validator
         run: npm install
 
-      - name: Install Xvfb
-        run: sudo apt-get install -y xvfb
-
       - name: Validate jobs
         env:
           APP_URL: ${{ secrets.APP_URL }}
           CRON_SECRET: ${{ secrets.CRON_SECRET }}
-          PUPPETEER_HEADLESS: "false"
         working-directory: tools/job-link-validator
-        run: xvfb-run -a npm run start
+        run: npm run start
 
       - name: Notify on failure
         if: failure()
