--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev": "next dev",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "jest",
+    "test": "jest --config ./_tests_/jest.config.mjs",
+    "test:watch": "jest --config ./_tests_/jest.config.mjs --watch",
+    "test:coverage": "jest --config ./_tests_/jest.config.mjs --coverage",
+    "test:e2e": "playwright test --config ./_tests_/playwright.config.ts",
     "start": "next start",
     "prepare": "husky",
     "postbuild": "next-sitemap",
